--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Ini Banner -->
 <div class="banner" id="beranda">
-    <img src="img/selamat datang di pantai labombo.jpg" alt="Selamat Datang Di Pantai Labombo">
+    <img src="selamat datang di pantai labombo.jpg" alt="Selamat Datang Di Pantai Labombo">
     <h1>Hi...<span></span></h1>
     <p>Salekoe, Kecamatan Wara Timur, Palopo</p>
 
@@ -38,17 +38,17 @@
 <div class="box-about">
     <h1>About Pantai Labombo</h1>
     <div class="box-kiri">
-        <img src="img/pantai labombo 3.jpeg" alt="PANTAI LABOMBO" width="250px">
+        <img src="pantai labombo 3.jpeg" alt="PANTAI LABOMBO" width="250px">
         <p>Pantai Labombo berada di Kota Palopo dan merupakan pantai yang dikelola dengan baik oleh pemda setempat. Wisata ke pantai ini memerlukan retribusi ketika masuk ke dalam. Di pantai ditemukan tenda, kursi atau hamparan pasir untuk sekedar duduk dan bersantai.</p>
     </div>
 
     <div class="box-tengah">
-        <img src="img/the view.jpeg" alt="VIEW PANTAI LABOMBO" width="250px">
+        <img src="the view.jpeg" alt="VIEW PANTAI LABOMBO" width="250px">
         <p>Ingin melihat sunrise di sini tempatnya. Dengan view laut teluk bone. Menyediakan hidangan khas Palopo, yang enak. Pantai ini cukup bersih karena jauh dari polusi. Pantai ini juga nyaris tidak berombak karena berada di teluk dan airnya cenderung tenang.</p>
     </div>
 
     <div class="box-kanan">
-        <img src="img/pantai labombo 4.jpg" alt="PANTAI LABOMBO" width="250px">
+        <img src="pantai labombo 4.jpg" alt="PANTAI LABOMBO" width="250px">
         <p>Wisata ini cocok untuk anda dan keluarga di kirasan Kota Palopo sambil bersantap siang disekitar pantai. Sebagai tambahan, lokasinya juga menarik untuk fotografi karena suasana pantai yang alami oleh tumbuhan pesisir.</p>
     </div>
 </div>
@@ -59,9 +59,9 @@
     <br id="galeri"><br><br><br><br><br>
     <h2>Gallery</h2>
     <div class="galeri-container">
-        <div class="gambar-item"><img src="img/cafe labombo.jpg" alt="CAFE LABOMBO"></div>
-        <div class="gambar-item"><img src="img/pantai labombo.jpg" alt="PANTAI LABOMBO"></div>
-        <div class="gambar-item"><img src="img/pantai labombo 5.webp" alt="PANTAI LABOMBO"></div>
+        <div class="gambar-item"><img src="cafe labombo.jpg" alt="CAFE LABOMBO"></div>
+        <div class="gambar-item"><img src="pantai labombo.jpg" alt="PANTAI LABOMBO"></div>
+        <div class="gambar-item"><img src="pantai labombo 5.webp" alt="PANTAI LABOMBO"></div>
     </div>
 </section>
 
